Refactor MCPSQLExecutionFacade